# tachidesk-notifier

./: .dockerignore  .env.sample  Dockerfile  README.md  logging_config.ini  pyproject.toml
tachidesk_notifier/: tachidesk_notifier.py
tests/: test_tachidesk_notifier.py
