[tool.poetry]
name = "tachidesk-notifier"
version = "0.1.0"
description = "A notification system for Tachidesk manga updates"
authors = ["timesfai <timesfai@fastmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.26.0"
pyTelegramBotAPI = "^4.2.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"